# ZTIS

./: README.md  app.py  pyproject.toml  testni_primeri5.xlsx
