[tool.poetry]
name = "jira-clone"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "jira_clone"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.13"
streamlit = "^1.27.2"
numpy = "^1.26.0"
pandas = "^2.1.1"
cryptocmd = "^0.6.3"
scikit-learn = "^1.3.1"
altair = "^5.1.2"
matplotlib = "^3.8.0"
yfinance = "^0.2.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
